# resistancemap-

./: .gitignore  CLAUDE.md  LICENSE  README.md  STATUS.md  pyproject.toml
comparators/: MIOFLOW.md
configs/: default.yaml
data/processed/: commpass.csv
docs/: CONTRIBUTION.md  EXTVAL_LOG.md  EXTVAL_SYNTHESIS.md  FIGURES.md  FORMULATION.md  LANE2_TREATMENT_NONPH.md  MIGRATION.md  MODEL_DIAGNOSIS.md  PATH_A_IMMUNE_FUSION.md  RESEARCH_LANDSCAPE.md  RESULTS_INTERPRETABILITY.md  RESULTS_LANE1.md  THEORY_LOOP_LOG.md  THEORY_LOOP_SYNTHESIS.md
literature/: PRISMA.md  PROTOCOL.md  references.csv  search_strings.md
paper/: SKELETON.md
paper/figures/: FIGURES.md
results/: baseline_smoketest.json  cv_governance.json  cv_results.json  governance_report.json  paper_metrics_real.json  paper_table1.md  sota_comparison.json  sota_table.md
results/extval/: iter1.json  iter2.json  iter3.json
results/figures/: figures_manifest.json
results/interpretability/: interpretability.json
results/lane2/: landmark_results.json  landmark_results.md  landmark_results_v2.json  landmark_results_v2.md
results/theory_loop/: iter1.json  iter2.json  iter3.json  (+3 more)
scripts/: build_commpass_dataset.py  build_commpass_from_gdc_tsv.py  download_gdc_open.sh  experiment_fht.PY  interpret_pfs.py  make_capstone_figure.py  make_more_figures.py  paper_figures.py  paper_metrics.py  run_all.py  run_baselines.py  run_lane2_landmark.py  run_lane2_v2.py  run_sota_comparison.py  run_sota_figures.py
tests/: test_data.py  test_lane2_treatment.py  test_models.py  test_modules.py  test_survival.py
(+43 files in other folders)
