[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resistancemap"
version = "0.1.0"
description = "Interpretable, censoring-honest forecasting of multiple-myeloma progression on open data."
authors = [{name = "Abhignya Jagathpally"}]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "lifelines>=0.28",
  "scikit-survival>=0.23",
  "pyyaml>=6.0",
  "requests>=2.28",
]

[project.optional-dependencies]
omics = ["scanpy>=1.10", "anndata>=0.10", "scvi-tools>=1.1"]
deep  = ["torch>=2.1"]

[tool.setuptools.packages.find]
where = ["src"]
